2009-05-14  Thomas Moulard  <thomas.moulard@gmail.com>

	Do not search for a symbol when looking for gfortran.
	* build-aux/ipopt.m4: To avoid portability problem, do not
	search for a specific symbol.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Update NEWS.
	* NEWS: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix makeBound call.
	* tests/hs071.hh: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	* .gitignore,
	* AUTHORS,
	* COPYING,
	* ChangeLog,
	* Makefile.am,
	* NEWS,
	* README,
	* bootstrap,
	* build-aux/acx_pthread.m4,
	* build-aux/autotest.at,
	* build-aux/autotest.mk,
	* build-aux/bootstrap,
	* build-aux/init.mk,
	* build-aux/ipopt.m4,
	* build-aux/roboptim-core.m4,
	* build-aux/warning.m4,
	* configure.ac,
	* doc/Doxyfile.in,
	* doc/Makefile.am,
	* doc/doxygen.css,
	* doc/footer.html,
	* doc/header.html,
	* doc/package.css,
	* doc/sf-upload.sh.in,
	* doc/tabs.css,
	* include/Makefile.am,
	* include/roboptim/core/plugin/ipopt.hh,
	* src/Makefile.am,
	* src/doc.hh,
	* src/roboptim-core-ipopt-plugin.cc,
	* tests/Makefile.am,
	* tests/atlocal.in,
	* tests/common.hh,
	* tests/hs071.hh,
	* tests/ipopt-test.stdout,
	* tests/package.m4.in,
	* tests/plugin.cc,
	* tests/plugin.stdout,
	* tests/simple.cc,
	* tests/simple.stdout,
	* tests/testsuite.at: Import from roboptim-core.