@@ -1,5 +1,10 @@
 2009-05-14  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Handle failures proplery.
+	* src/roboptim-core-ipopt-plugin.cc: Here.
+
+2009-05-14  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Do not search for a symbol when looking for gfortran.
 	* build-aux/ipopt.m4: To avoid portability problem, do not
 	search for a specific symbol.
